<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.Fragment_Weather">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/linear_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgraund1"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_place"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo1"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/ic_place" />

        <TextView
            android:id="@+id/textView_cityName"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="3"
            android:paddingTop="10dp"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/image_location"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo2"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/ic_my_location" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackgraund1"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="ЧТ, 19 июля"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/linear_head" />

    <LinearLayout
        android:id="@+id/linear_weather_hour"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorBackgraund1"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textView_date">

        <ImageView
            android:id="@+id/imageView_main"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/todo3" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo4"
                    app:srcCompat="@drawable/ic_temp" />

                <TextView
                    android:id="@+id/textView_actual_temp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="27°/19°"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo5"
                    app:srcCompat="@drawable/ic_humidity" />

                <TextView
                    android:id="@+id/textView_actualHum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="33%"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo6"
                    app:srcCompat="@drawable/ic_wind" />

                <TextView
                    android:id="@+id/textView_actual_wind_speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="5м/сек"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imageView_actual_win_deg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo7"
                    app:srcCompat="@drawable/ic_icon_wind_e" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recHourWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorBackgraund2"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_weather_hour">

    </androidx.recyclerview.widget.RecyclerView>
    <ListView
        android:id="@+id/listDayWeather"
        app:layout_constraintTop_toBottomOf="@+id/recHourWeather"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>